--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body{
+        font-family:sans-sarif;
+      }
+    </style>
+  </head>
+  <body>
 <!-- Tab links -->
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Jamal')">Jamal</button>
   <button class="tablinks" onclick="openCity(event, 'Download')">Download</button>
   <button class="tablinks" onclick="openCity(event, 'Jimmy')">Jimmy</button>
+  
 </div>
 
 <!-- Tab content -->
@@ -21,3 +31,5 @@
   <h3>Jimmy</h3>
   <p>Jimmy Jackson Is Very Very Cool.</p>
 </div>
+</body>  
+</html>
