--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body{
-        font-family:sans-sarif;
+        font-family:arial;
       }
     </style>
   </head>
@@ -23,7 +23,7 @@
 </div>
 
 <div id="Jamals Story" class="tabcontent">
-  <h3>Paris</h3>
+  <h3>JAMAL</h3>
   <p>Jamal Playground 64 is a Great Game.</p>
 </div>
 
