--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Jamal')">Jamal</button>
+ <a href="https://google.com"> <button class="tablinks" onclick="openCity(event, 'Jamal')">Jamal</button></a>
   <button class="tablinks" onclick="openCity(event, 'Download')">Download</button>
   <button class="tablinks" onclick="openCity(event, 'Jimmy')">Jimmy</button>
   
