--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Tab content -->
-<div id="London" class="tabcontent">
+<div id="Download" class="tabcontent">
   <h3>Download</h3>
   <p>Hi.</p>
 </div>
