--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Tab links -->
 <div class="tab">
  <a href="https://www.google.com/"> <button class="tablinks" onclick="openCity(event, 'Jamal')">Jamal</button></a>
-  <button class="tablinks" onclick="openCity(event, 'Download')">Download</button>
+ <a href="download.html"> <button class="tablinks" onclick="openCity(event, 'Download')">Download</button></a>
   <button class="tablinks" onclick="openCity(event, 'Jimmy')">Jimmy</button>
   
 </div>
