--- a/download.html
+++ b/download.html
@@ -12,18 +12,13 @@
     <p>Loading...</p>
   </div>
 
-  <!-- Content of the page (hidden initially) -->
-  <div class="content" style="display:none;">
+  <!-- The page content is commented out because it won't be displayed -->
+  <!-- 
+  <div class="content">
     <h1>Welcome to the Page!</h1>
-    <p>This is the content of the page after the loading screen disappears.</p>
+    <p>This is the content of the page.</p>
   </div>
-
-  <script>
-    // When the window finishes loading, hide the loader and show the content
-    window.onload = function() {
-      document.querySelector('.loader').style.display = 'none';  // Hide the loader
-      document.querySelector('.content').style.display = 'block';  // Show the content
-    };
-  </script>
+  -->
 </body>
 </html>
+
