--- a/download.html
+++ b/download.html
@@ -9,16 +9,7 @@
 <body>
   <div class="loader">
     <div class="spinner"></div>
-    <p>Loading...</p>
+    <p class="loading-text">JAMAL PLAYGROUND 64 LOADING</p>
   </div>
-
-  <!-- The page content is commented out because it won't be displayed -->
-  <!-- 
-  <div class="content">
-    <h1>Welcome to the Page!</h1>
-    <p>This is the content of the page.</p>
-  </div>
-  -->
 </body>
 </html>
-
