--- a/download.html
+++ b/download.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Loader Container -->
   <div class="loader">
+    <!-- Spinner -->
     <div class="spinner"></div>
+    <!-- Loading Text -->
     <p class="loading-text">JAMAL PLAYGROUND 64 LOADING</p>
   </div>
 </body>
