--- a/download.html
+++ b/download.html
@@ -8,6 +8,9 @@
     body {
       margin: 0;
       overflow: hidden;
+      font-family: 'Poppins', Arial, sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      color: white;
     }
     #loading-screen {
       position: fixed;
@@ -15,33 +18,44 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      color: white;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
       z-index: 9999;
     }
     #spinner {
-      border: 5px solid rgba(255, 255, 255, 0.3);
-      border-top: 5px solid white;
+      border: 6px solid rgba(255, 255, 255, 0.3);
+      border-top: 6px solid white;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       animation: spin 1s linear infinite;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+    #loading-text {
+      margin-top: 20px;
+      font-size: 24px;
+      font-weight: 600;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
+      letter-spacing: 1.5px;
+      animation: fadeIn 2s infinite alternate;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+    @keyframes fadeIn {
+      0% { opacity: 0.5; }
+      100% { opacity: 1; }
+    }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="loading-screen">
     <div id="spinner"></div>
-    <p>JAMAL PLAYGROUND 64 IS LOADING</p>
+    <p id="loading-text">JAMAL PLAYGROUND 64 IS LOADING</p>
   </div>
 </body>
 </html>
