--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 <!-- Tab content -->
 <div id="Download" class="tabcontent">
   <h3>Download</h3>
-  <p>Hi.</p>
+  <p>Get ready to dive into the exciting world of Jamal Playground 64! Click the download button to start your journey.</p>
 </div>
 
 <div id="Jamal" class="tabcontent">
   <h3>JAMAL</h3>
-  <p>Jamal Playground 64 is a Great Game.</p>
+  <p><strong>Jamal Playground 64</strong> is an adventurous and quirky sandbox game where players explore vibrant worlds, tackle unique challenges, and meet a cast of unforgettable characters. From solving puzzles to racing against time, there's always something thrilling to do in Jamal Playground 64!</p>
 </div>
 
 <div id="Jimmy" class="tabcontent">
   <h3>Jimmy</h3>
-  <p>Jimmy Jackson Is Very Very Cool.</p>
+  <p>Jimmy Jackson, the fearless explorer, is a legendary character in Jamal Playground 64. Known for his quick wit and daring stunts, Jimmy is here to guide you through the most treacherous levels with a smile.</p>
 </div>
 
 <footer>
