--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
       overflow: hidden;
       font-family: 'Poppins', Arial, sans-serif;
       background: linear-gradient(135deg, #1e3c72, #2a5298);
-      color: white;
+      color: niger;
     }
     #loading-screen {
       position: fixed;
