--- a/download.html
+++ b/download.html
@@ -32,6 +32,7 @@
       height: 60px;
       animation: spin 1s linear infinite;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      color: niger;
     }
     #loading-text {
       margin-top: 20px;
