--- a/download.html
+++ b/download.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div id="loading-screen">
-    <div id="spinner"></div>
+    <div id="spinner" style="background-color:niger; color:niger;"></div>
     <p id="loading-text">JAMAL PLAYGROUND 64 IS LOADING</p>
   </div>
 </body>
