--- a/download.html
+++ b/download.html
@@ -57,6 +57,7 @@
   <div id="loading-screen">
     <div id="spinner" style="background-color:black;"></div>
     <p id="loading-text">JAMAL PLAYGROUND 64 IS LOADING</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2kbo3ZYvi4XbNL6c4MhQV7mrds3JCH5stgA&s"/>
   </div>
 </body>
 </html>
