--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <div id="Jimmy" class="tabcontent">
   <h3>Jimmy</h3>
-  <p>Jimmy Jackson, the fearless explorer, is a legendary character in Jamal Playground 64. Known for his quick wit and daring stunts, Jimmy is here to guide you through the most treacherous levels with a smile.</p>
+  <p>jayden likes jenny.</p>
 </div>
 
 <footer>
